--- a/about.html
+++ b/about.html
@@ -114,6 +114,12 @@
   </div>
 </footer>
 
+<div class="sticky-cta" role="region" aria-label="Hızlı iletişim">
+  <a class="btn btn-primary" href="https://wa.me/905323510731?text=Merhaba%2C%20CANS%20Sigorta%20hakk%C4%B1nda%20h%C4%B1zl%C4%B1%20teklif%20almak%20istiyorum.">📱 WhatsApp</a>
+  <a class="btn btn-ghost" href="tel:+905323510731">📞 Ara</a>
+  <a class="btn btn-ghost" href="mailto:can@canssigorta.com">📧 E-posta</a>
+</div>
+
 <a class="whatsapp-fab" href="https://wa.me/905323510731?text=Merhaba%2C%20CANS%20Sigorta%20hakkinda%20bilgi%20almak%20istiyorum." aria-label="WhatsApp">WhatsApp</a>
 
 <script>
