--- a/bes.html
+++ b/bes.html
@@ -195,5 +195,12 @@
     });
   });
 </script>
+
+<div class="sticky-cta" role="region" aria-label="Hızlı iletişim">
+  <a class="btn btn-primary" href="https://wa.me/905323510731?text=Merhaba%2C%20BES%20teklifi%20almak%20istiyorum.">📱 WhatsApp</a>
+  <a class="btn btn-ghost" href="tel:+905323510731">📞 Ara</a>
+  <a class="btn btn-ghost" href="mailto:can@canssigorta.com">📧 E-posta</a>
+</div>
+
 </body>
 </html>
