--- a/saglik.html
+++ b/saglik.html
@@ -143,5 +143,12 @@
   const io=new IntersectionObserver(es=>{es.forEach(e=>{if(e.isIntersecting)e.target.classList.add('reveal-on');});},{threshold:.15});
   document.querySelectorAll('.reveal').forEach(el=>io.observe(el));
 </script>
+
+<div class="sticky-cta" role="region" aria-label="Hızlı iletişim">
+  <a class="btn btn-primary" href="https://wa.me/905323510731?text=Merhaba%2C%20Saglik%20Sigortasi%20teklifi%20almak%20istiyorum.">📱 WhatsApp</a>
+  <a class="btn btn-ghost" href="tel:+905323510731">📞 Ara</a>
+  <a class="btn btn-ghost" href="mailto:can@canssigorta.com">📧 E-posta</a>
+</div>
+
 </body>
 </html>
