--- a/kasko.html
+++ b/kasko.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
   <link rel="stylesheet" href="/assets/style.css">
+  <script src="/assets/animations.js" defer></script>
 
   <!-- OG/Twitter -->
   <meta property="og:url" content="https://www.canssigorta.com/kasko.html">
