--- a/bes.html
+++ b/bes.html
@@ -11,6 +11,14 @@
   <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
   <link rel="stylesheet" href="/assets/style.css">
   <script src="/assets/animations.js" defer></script>
+  <script src="/assets/chatbot.js" defer></script>
+  <script src="/assets/calculators.js" defer></script>
+  <script src="/assets/pwa.js" defer></script>
+  <script src="/assets/visual-effects.js" defer></script>
+  <script src="/assets/smart-forms.js" defer></script>
+  <script src="/assets/analytics.js" defer></script>
+  <script src="/assets/loyalty.js" defer></script>
+  <script src="/assets/accessibility.js" defer></script>
 
   <!-- OG/Twitter -->
   <meta property="og:url" content="https://www.canssigorta.com/bes.html">
