--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hakkımızda | CANS Sigorta - AgeSa Resmi Acentesi</title>
+  <title>Hakkımızda | CANS Sigorta - AgeSa Acentesi</title>
   <meta name="description" content="CANS Sigorta Acentelik Hizmetleri: AgeSa resmi acentesi, 16 Elementer şirketi ile İstanbul Halkalı'da güvenilir sigorta hizmetleri.">
   <link rel="canonical" href="https://www.canssigorta.com/about.html">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
