--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
       <div>
         <h1>İstanbul'un En Güvenilir Sigorta Acentesi</h1>
-        <p style="font-size: 1.25rem; margin-bottom: 1rem;"><strong>CANS Sigorta</strong> - AgeSa Resmi Acentesi | 16 Elementer Şirketi ile Kapsamlı Sigorta Çözümleri</p>
+        <p style="font-size: 1.25rem; margin-bottom: 1rem;"><strong>CANS Sigorta</strong> - 16 Elementer Şirketi ile Kapsamlı Sigorta Çözümleri</p>
         <p style="margin-bottom: 2rem;">Bireysel Emeklilik, Hayat, Trafik, Kasko, DASK, Sağlık ve daha fazlası. İstanbul Küçükçekmece Halkalı'da hizmetinizdeyiz.</p>
         <div class="cta-row">
           <a href="https://wa.me/905323510731?text=Merhaba%2C%20sigorta%20teklifi%20almak%20istiyorum." class="btn btn-primary" aria-label="WhatsApp ile sigorta teklifi al">📱 WhatsApp'tan Hemen Teklif Al</a>
@@ -114,7 +114,6 @@
           <div class="text-gradient" style="font-size: 1.5rem; font-weight: 800; margin-bottom: 0.5rem;">16+</div>
           <div style="font-size: 1.125rem; opacity: 0.9;">Elementer Şirketi</div>
           <div class="text-gradient" style="font-size: 1.5rem; font-weight: 800; margin: 1rem 0 0.5rem;">AgeSa</div>
-          <div style="font-size: 1.125rem; opacity: 0.9;">Resmi Acentesi</div>
         </div>
       </div>
     </div>
@@ -127,7 +126,7 @@
     <div class="cards three">
       <div class="card card-3d interactive" data-float="0.5">
         <div style="font-size: 3rem; margin-bottom: 1rem;" data-float="1">🏆</div>
-        <h3 class="text-gradient">AgeSa Resmi Acentesi</h3>
+        <h3 class="text-gradient">AgeSa Acentesi</h3>
         <p>Bireysel Emeklilik ve Hayat Sigortalarında Türkiye'nin en güçlü şirketinin resmi acentesiyiz. Güvenilir ve kaliteli hizmet garantisi.</p>
       </div>
       <div class="card">
