--- a/bes.html
+++ b/bes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bireysel Emeklilik (BES) | CANS Sigorta - AgeSa Resmi Acentesi</title>
+  <title>Bireysel Emeklilik (BES) | CANS Sigorta - AgeSa Acentesi</title>
   <meta name="description" content="CANS Sigorta ile AgeSa'nın resmi acentesi olarak Bireysel Emeklilik (BES) yapın. %30 devlet katkısı ile geleceğinizi güvence altına alın.">
   <link rel="canonical" href="https://www.canssigorta.com/bes.html">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,6 +74,28 @@
           <div style="font-size: 4rem; margin-bottom: 1rem;">💰</div>
           <div style="font-size: 2rem; font-weight: 800; margin-bottom: 0.5rem;">%30</div>
           <div style="font-size: 1.125rem; opacity: 0.9;">Devlet Katkısı</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- BES Hesaplayıcı Banner -->
+<section class="section" style="background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%); color: var(--white);">
+  <div class="container">
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
+      <div>
+        <h2 style="color: var(--white); margin-bottom: 1rem;">💰 BES Hesaplayıcı</h2>
+        <p style="font-size: 1.125rem; margin-bottom: 2rem; opacity: 0.9;">Aylık katkı payınızı girin, devlet katkısı ile birlikte ne kadar birikeceğini hesaplayın!</p>
+        <button class="btn" style="background: var(--white); color: var(--primary); font-weight: 600; padding: 1rem 2rem; border-radius: 50px;" onclick="cansCalculators.openCalculator('bes')">
+          🧮 BES Hesapla
+        </button>
+      </div>
+      <div style="text-align: center;">
+        <div style="background: rgba(255,255,255,0.1); border-radius: 2rem; padding: 2rem; border: 1px solid rgba(255,255,255,0.2);">
+          <div style="font-size: 3rem; margin-bottom: 1rem;">📊</div>
+          <div style="font-size: 1.5rem; font-weight: 800; margin-bottom: 0.5rem;">Hızlı Hesaplama</div>
+          <div style="font-size: 1rem; opacity: 0.9;">Anında Sonuç</div>
         </div>
       </div>
     </div>
