--- a/iletisim.html
+++ b/iletisim.html
@@ -55,11 +55,12 @@
     <nav class="menu">
       <a href="index.html">Ana Sayfa</a>
       <a href="bes.html">Bireysel Emeklilik</a>
-      <a href="hayat.html">Hayat</a>
+      <a href="hayat.html">Hayat Sigortası</a>
       <a href="trafik.html">Trafik</a>
       <a href="kasko.html">Kasko</a>
       <a href="dask.html">DASK</a>
       <a href="saglik.html">Sağlık</a>
+      <a href="konut.html">Konut</a>
       <a href="about.html">Hakkımızda</a>
       <a class="active" href="iletisim.html">İletişim</a>
     </nav>
@@ -117,7 +118,7 @@
       <div class="card card-3d glow" style="text-align: center; padding: 2rem; border: none; box-shadow: var(--shadow-xl);" data-float="4">
         <div style="font-size: 4rem; margin-bottom: 1.5rem;">📍</div>
         <h3 style="color: var(--primary); margin-bottom: 1rem;">Adres</h3>
-        <p style="color: var(--gray-700); font-weight: 500; margin-bottom: 1rem;">İstanbul Küçükçekmece<br>Halkalı</p>
+        <p style="color: var(--gray-700); font-weight: 500; margin-bottom: 1rem;">Halkalı Merkez Mahallesi<br>Gazi Sokak, No 41/A<br>Küçükçekmece / İstanbul</p>
         <a href="https://maps.google.com/?q=Küçükçekmece+Halkalı" style="color: var(--accent); font-weight: 600; text-decoration: none; font-size: 0.875rem;">Haritada Gör</a>
       </div>
     </div>
@@ -222,7 +223,7 @@
         </iframe>
       </div>
       <div style="text-align: center; margin-top: 1.5rem;">
-        <p style="color: var(--gray-600); margin-bottom: 1rem;">📍 İstanbul Küçükçekmece Halkalı</p>
+        <p style="color: var(--gray-600); margin-bottom: 1rem;">📍 Halkalı Merkez Mahallesi, Gazi Sokak, No 41/A, Küçükçekmece / İstanbul</p>
         <a href="https://maps.google.com/?q=Küçükçekmece+Halkalı" class="btn btn-ghost" style="text-decoration: none;">
           🧭 Yol Tarifi Al
         </a>
