--- a/bes.html
+++ b/bes.html
@@ -47,11 +47,12 @@
     <nav class="menu">
       <a href="index.html">Ana Sayfa</a>
       <a class="active" href="bes.html">Bireysel Emeklilik</a>
-      <a href="hayat.html">Hayat</a>
+      <a href="hayat.html">Hayat Sigortası</a>
       <a href="trafik.html">Trafik</a>
       <a href="kasko.html">Kasko</a>
       <a href="dask.html">DASK</a>
       <a href="saglik.html">Sağlık</a>
+      <a href="konut.html">Konut</a>
       <a href="about.html">Hakkımızda</a>
       <a href="iletisim.html">İletişim</a>
     </nav>
@@ -63,17 +64,18 @@
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
       <div>
         <h1>Bireysel Emeklilik ile Geleceğinizi Güvence Altına Alın</h1>
-        <p style="font-size: 1.25rem; margin-bottom: 2rem;">CANS Sigorta olarak AgeSa'nın resmi acentesi sıfatıyla, her yatırdığınız 1 TL'ye <strong>%30 devlet katkısı</strong> ile birikiminizi daha hızlı büyütün.</p>
+        <p style="font-size: 1.25rem; margin-bottom: 2rem;">CANS Sigorta olarak AgeSa'nın acentesi sıfatıyla, aylık prim tutarınıza <strong>%30 devlet katkısı</strong> ile birikiminizi daha hızlı büyütün.</p>
         <div class="cta-row">
           <a href="https://wa.me/905323510731?text=Merhaba%2C%20BES%20teklifi%20almak%20istiyorum." class="btn btn-primary">📱 WhatsApp'tan Teklif Al</a>
           <a href="tel:+905323510731" class="btn btn-ghost">📞 Hemen Ara</a>
         </div>
       </div>
       <div style="text-align: center;">
-        <div style="background: rgba(255,255,255,0.1); border-radius: 2rem; padding: 2rem; border: 1px solid rgba(255,255,255,0.2);">
-          <div style="font-size: 4rem; margin-bottom: 1rem;">💰</div>
-          <div style="font-size: 2rem; font-weight: 800; margin-bottom: 0.5rem;">%30</div>
-          <div style="font-size: 1.125rem; opacity: 0.9;">Devlet Katkısı</div>
+        <div class="card-3d glow" style="background: linear-gradient(135deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0.1) 100%); border-radius: 2rem; padding: 2.5rem; border: 2px solid rgba(255,255,255,0.3); box-shadow: 0 20px 40px rgba(0,0,0,0.2);" data-float="2">
+          <div style="font-size: 5rem; margin-bottom: 1.5rem; filter: drop-shadow(0 4px 8px rgba(0,0,0,0.3));">💰</div>
+          <div style="font-size: 3rem; font-weight: 900; margin-bottom: 0.5rem; background: linear-gradient(45deg, #FFD700, #FFA500); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0 2px 4px rgba(0,0,0,0.3);">%30</div>
+          <div style="font-size: 1.25rem; opacity: 0.95; font-weight: 600; text-shadow: 0 1px 2px rgba(0,0,0,0.3);">Devlet Katkısı</div>
+          <div style="font-size: 0.875rem; opacity: 0.8; margin-top: 0.5rem;">Her Aylık Prim İçin</div>
         </div>
       </div>
     </div>
