--- a/about.html
+++ b/about.html
@@ -47,11 +47,12 @@
     <nav class="menu">
       <a href="index.html">Ana Sayfa</a>
       <a href="bes.html">Bireysel Emeklilik</a>
-      <a href="hayat.html">Hayat</a>
+      <a href="hayat.html">Hayat Sigortası</a>
       <a href="trafik.html">Trafik</a>
       <a href="kasko.html">Kasko</a>
       <a href="dask.html">DASK</a>
       <a href="saglik.html">Sağlık</a>
+      <a href="konut.html">Konut</a>
       <a class="active" href="about.html">Hakkımızda</a>
       <a href="iletisim.html">İletişim</a>
     </nav>
@@ -109,7 +110,7 @@
       </div>
       <div class="card">
         <div style="width:120px;height:120px;border-radius:50%;background:var(--acik-mavi);display:flex;align-items:center;justify-content:center;margin:0 auto 15px;font-size:48px;color:var(--mavi);">👨‍💼</div>
-        <h3>Ahmet Can</h3>
+        <h3>Ahmet Can Sangür</h3>
         <p>Kurucu Ortak</p>
       </div>
     </div>
