--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CANS Sigorta - İstanbul'un En Güvenilir Sigorta Acentesi | AgeSa Resmi Acentesi</title>
-  <meta name="description" content="CANS Sigorta - AgeSa'nın resmi acentesi olarak Bireysel Emeklilik ve Hayat Sigortaları. 16 Elementer şirketi ile Trafik, Kasko, DASK, Sağlık sigortaları. İstanbul Küçükçekmece Halkalı'da hizmetinizdeyiz.">
+  <title>CANS Sigorta - Türkiye'nin En Güvenilir Sigorta Acentesi | AgeSa Acentesi</title>
+  <meta name="description" content="CANS Sigorta - Türkiye'nin en güvenilir sigorta acentesi. AgeSa acentesi olarak Bireysel Emeklilik ve Hayat Sigortaları. 16 Elementer şirketi ile Trafik, Kasko, DASK, Sağlık sigortaları. İstanbul Küçükçekmece Halkalı'da hizmetinizdeyiz.">
   <link rel="canonical" href="https://www.canssigorta.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -101,7 +101,7 @@
   <div class="container">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
       <div>
-        <h1>İstanbul'un En Güvenilir Sigorta Acentesi</h1>
+        <h1>Türkiye'nin En Güvenilir Sigorta Acentesi</h1>
         <p style="font-size: 1.25rem; margin-bottom: 1rem;"><strong>CANS Sigorta</strong> - 16 Elementer Şirketi ile Kapsamlı Sigorta Çözümleri</p>
         <p style="margin-bottom: 2rem;">Bireysel Emeklilik, Hayat, Trafik, Kasko, DASK, Sağlık ve daha fazlası. İstanbul Küçükçekmece Halkalı'da hizmetinizdeyiz.</p>
         <div class="cta-row">
