--- a/iletisim.html
+++ b/iletisim.html
@@ -119,7 +119,7 @@
         <div style="font-size: 4rem; margin-bottom: 1.5rem;">📍</div>
         <h3 style="color: var(--primary); margin-bottom: 1rem;">Adres</h3>
         <p style="color: var(--gray-700); font-weight: 500; margin-bottom: 1rem;">Halkalı Merkez Mahallesi<br>Gazi Sokak, No 41/A<br>Küçükçekmece / İstanbul</p>
-        <a href="https://maps.google.com/?q=Küçükçekmece+Halkalı" style="color: var(--accent); font-weight: 600; text-decoration: none; font-size: 0.875rem;">Haritada Gör</a>
+        <a href="https://maps.google.com/?q=Halkalı+Merkez+Mahallesi,+Gazi+Sokak,+No+41/A,+Küçükçekmece,+İstanbul" style="color: var(--accent); font-weight: 600; text-decoration: none; font-size: 0.875rem;">Haritada Gör</a>
       </div>
     </div>
   </div>
@@ -214,7 +214,7 @@
     <div style="background: var(--white); border-radius: 1rem; padding: 2rem; box-shadow: var(--shadow-lg);">
       <div style="width: 100%; height: 400px; border-radius: 0.5rem; overflow: hidden;">
         <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12033.2023!2d28.890!3d41.029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDEuMDI5LCAyOC44OTA!5e0!3m2!1str!2str!4v1692892500000!5m2!1str!2str" 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.123456789!2d28.8901234!3d41.0295678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDEuMDI5NTY3OCwgMjguODkwMTIzNA!5e0!3m2!1str!2str!4v1692892500000!5m2!1str!2str&q=Halkalı+Merkez+Mahallesi,+Gazi+Sokak,+No+41/A,+Küçükçekmece,+İstanbul" 
           width="100%" 
           height="100%" 
           style="border:0;" 
@@ -224,7 +224,7 @@
       </div>
       <div style="text-align: center; margin-top: 1.5rem;">
         <p style="color: var(--gray-600); margin-bottom: 1rem;">📍 Halkalı Merkez Mahallesi, Gazi Sokak, No 41/A, Küçükçekmece / İstanbul</p>
-        <a href="https://maps.google.com/?q=Küçükçekmece+Halkalı" class="btn btn-ghost" style="text-decoration: none;">
+        <a href="https://maps.google.com/?q=Halkalı+Merkez+Mahallesi,+Gazi+Sokak,+No+41/A,+Küçükçekmece,+İstanbul" class="btn btn-ghost" style="text-decoration: none;">
           🧭 Yol Tarifi Al
         </a>
       </div>
