--- a/bes.html
+++ b/bes.html
@@ -19,6 +19,9 @@
   <script src="/assets/analytics.js" defer></script>
   <script src="/assets/loyalty.js" defer></script>
   <script src="/assets/accessibility.js" defer></script>
+  <script src="/assets/mobile-gestures.js" defer></script>
+  <script src="/assets/visual-enhancements.js" defer></script>
+  <script src="/assets/seo-optimization.js" defer></script>
 
   <!-- OG/Twitter -->
   <meta property="og:url" content="https://www.canssigorta.com/bes.html">
