--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <script src="/assets/analytics.js" defer></script>
   <script src="/assets/loyalty.js" defer></script>
   <script src="/assets/accessibility.js" defer></script>
+  <script src="/assets/mobile-gestures.js" defer></script>
+  <script src="/assets/visual-enhancements.js" defer></script>
+  <script src="/assets/seo-optimization.js" defer></script>
 
   <!-- OG/Twitter -->
   <meta property="og:url" content="https://www.canssigorta.com/">
@@ -101,12 +104,12 @@
   <div class="container">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
       <div>
-        <h1>Türkiye'nin En Güvenilir Sigorta Acentesi</h1>
+        <h1 class="text-glow">Türkiye'nin En Güvenilir Sigorta Acentesi</h1>
         <p style="font-size: 1.25rem; margin-bottom: 1rem;"><strong>CANS Sigorta</strong> - 16 Elementer Şirketi ile Kapsamlı Sigorta Çözümleri</p>
         <p style="margin-bottom: 2rem;">Bireysel Emeklilik, Hayat, Trafik, Kasko, DASK, Sağlık ve daha fazlası. İstanbul Küçükçekmece Halkalı'da hizmetinizdeyiz.</p>
         <div class="cta-row">
-          <a href="https://wa.me/905323510731?text=Merhaba%2C%20sigorta%20teklifi%20almak%20istiyorum." class="btn btn-primary" aria-label="WhatsApp ile sigorta teklifi al">📱 WhatsApp'tan Hemen Teklif Al</a>
-          <a href="tel:+905323510731" class="btn btn-ghost" aria-label="Telefon ile hemen ara">📞 Hemen Ara: +90 532 351 0731</a>
+          <a href="https://wa.me/905323510731?text=Merhaba%2C%20sigorta%20teklifi%20almak%20istiyorum." class="btn btn-primary btn-enhanced" aria-label="WhatsApp ile sigorta teklifi al">📱 WhatsApp'tan Hemen Teklif Al</a>
+          <a href="tel:+905323510731" class="btn btn-ghost btn-enhanced" aria-label="Telefon ile hemen ara">📞 Hemen Ara: +90 532 351 0731</a>
         </div>
       </div>
       <div style="text-align: center;">
