--- a/trafik.html
+++ b/trafik.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
   <link rel="stylesheet" href="/assets/style.css">
   <script src="/assets/animations.js" defer></script>
+  <script src="/assets/mobile-gestures.js" defer></script>
 
   <!-- OG/Twitter -->
   <meta property="og:url" content="https://www.canssigorta.com/trafik.html">
