--- a/hayat.html
+++ b/hayat.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="/assets/style.css">
   <script src="/assets/animations.js" defer></script>
   <script src="/assets/mobile-gestures.js" defer></script>
+  <script src="/assets/visual-enhancements.js" defer></script>
+  <script src="/assets/seo-optimization.js" defer></script>
 
   <!-- OG/Twitter -->
   <meta property="og:url" content="https://www.canssigorta.com/hayat.html">
@@ -46,11 +48,12 @@
     <nav class="menu">
       <a href="index.html">Ana Sayfa</a>
       <a href="bes.html">Bireysel Emeklilik</a>
-      <a class="active" href="hayat.html">Hayat</a>
+      <a class="active" href="hayat.html">Hayat Sigortası</a>
       <a href="trafik.html">Trafik</a>
       <a href="kasko.html">Kasko</a>
       <a href="dask.html">DASK</a>
       <a href="saglik.html">Sağlık</a>
+      <a href="konut.html">Konut</a>
       <a href="about.html">Hakkımızda</a>
       <a href="iletisim.html">İletişim</a>
     </nav>
