--- a/bes.html
+++ b/bes.html
@@ -66,8 +66,8 @@
   <div class="container">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
       <div>
-        <h1>Bireysel Emeklilik ile Geleceğinizi Güvence Altına Alın</h1>
-        <p style="font-size: 1.25rem; margin-bottom: 2rem;">CANS Sigorta olarak AgeSa'nın acentesi sıfatıyla, aylık prim tutarınıza <strong>%30 devlet katkısı</strong> ile birikiminizi daha hızlı büyütün.</p>
+        <h1 class="text-glow">Bireysel Emeklilik ile Geleceğinizi Güvence Altına Alın</h1>
+        <p style="font-size: 1.25rem; margin-bottom: 2rem; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);">CANS Sigorta olarak AgeSa'nın acentesi sıfatıyla, aylık prim tutarınıza <strong>%30 devlet katkısı</strong> ile birikiminizi daha hızlı büyütün.</p>
         <div class="cta-row">
           <a href="https://wa.me/905323510731?text=Merhaba%2C%20BES%20teklifi%20almak%20istiyorum." class="btn btn-primary">📱 WhatsApp'tan Teklif Al</a>
           <a href="tel:+905323510731" class="btn btn-ghost">📞 Hemen Ara</a>
