--- a/konut.html
+++ b/konut.html
@@ -74,8 +74,8 @@
   <div class="container">
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
       <div>
-        <h1>Konutunuzu Her Türlü Riske Karşı Koruyun</h1>
-        <p style="font-size: 1.25rem; margin-bottom: 2rem;">Ev, daire, villa sigortası ile yangın, hırsızlık, doğal afet ve daha birçok riske karşı güvence altına alın. <strong>16 farklı sigorta şirketi</strong> ile en uygun prim.</p>
+        <h1 class="text-glow">Konutunuzu Her Türlü Riske Karşı Koruyun</h1>
+        <p style="font-size: 1.25rem; margin-bottom: 2rem; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);">Ev, daire, villa sigortası ile yangın, hırsızlık, doğal afet ve daha birçok riske karşı güvence altına alın. <strong>16 farklı sigorta şirketi</strong> ile en uygun prim.</p>
         <div class="cta-row">
           <a href="https://wa.me/905323510731?text=Merhaba%2C%20konut%20sigortası%20teklifi%20almak%20istiyorum." class="btn btn-primary">📱 WhatsApp'tan Teklif Al</a>
           <a href="tel:+905323510731" class="btn btn-ghost">📞 Hemen Ara</a>
