--- a/saglik.html
+++ b/saglik.html
@@ -62,8 +62,8 @@
 
 <section class="hero-banner" style="--hero:linear-gradient(135deg, #004aad 0%, #0066cc 100%)">
   <div class="container">
-    <h1>Sağlık Sigortası</h1>
-    <p>Kendinizi ve sevdiklerinizi sağlık risklerine karşı güvence altına alın. Yatarak ve ayakta tedavi teminatlarıyla her zaman yanınızdayız.</p>
+    <h1 class="text-glow">Sağlık Sigortası</h1>
+    <p style="text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);">Kendinizi ve sevdiklerinizi sağlık risklerine karşı güvence altına alın. Yatarak ve ayakta tedavi teminatlarıyla her zaman yanınızdayız.</p>
     <div class="cta-row">
       <a class="btn btn-primary" href="https://wa.me/905323510731?text=Merhaba%2C%20Saglik%20sigortasi%20hakkinda%20bilgi%20almak%20istiyorum.">WhatsApp: +90 532 351 0731</a>
       <a class="btn btn-ghost" href="tel:+905522099443">Hemen Ara: +90 552 209 9443</a>
